<resources>
    <string name="app_name" translatable="false">Misteri d\'Elx 2022</string>
    <string name="content_description_dummy" translatable="false">dummy</string>
    <string name="db_path" translatable="false">/data/data/com.tarsagorilapp.misteri/databases/</string>
    <string name="prueba_dummy" translatable="false">iNvitación a las mraias y pacos</string>
    <string name="prueba_nbslide_dummy" translatable="false">99/99</string>
    <string-array name="misteri_dates">
        <item>11/08/2014</item>
        <item>12/08/2014</item>
        <item>13/08/2014</item>
        <item>14/08/2014</item>
        <item>15/08/2014</item>
    </string-array>
    <string name="ca_button" translatable="false">Valencià</string>
    <string name="es_button" translatable="false">Español</string>
    <string name="en_button" translatable="false">English</string>
    <string name="de_button" translatable="false">Deutsch</string>
    <string name="it_button" translatable="false">Italiano</string>
    <string name="fr_button" translatable="false">Français</string>
    <string name="creditos">Infromación y Créditos</string>
    <string name="creditos_section">Créditos App</string>
    <string name="cred_title1">TEXTOS EXPLICATIVOS</string>
    <string name="cred_text1" translatable="false">Joan Castaño García</string>
    <string name="cred_title2">TRADUCCIONES</string>
    <string name="cred_text2" translatable="false">Gaspar Jaén i Urban, Joan Castaño García, Daniel McEvoy Bravo, Pedro Antonio Ródenas Caparrós, Belén García Jaramillo, Sophie Albert, Juan Carlos Romero Centurión, Nicolas Wyrwoll, Valeriano Venneri</string>
    <string name="cred_title3">FOTOGRAFÍAS</string>
    <string name="cred_text3" translatable="false">Sixto Marco Lozano, Juan Huedo Díaz, Fernando Huedo Díaz, Patronato Misteri d\'Elx</string>
    <string name="cred_title4">IDEA Y CONCEPTO</string>
    <string name="cred_text4" translatable="false">José Vicente Castaño</string>
    <string name="cred_title5">PRODUCCIÓN</string>
    <string name="cred_text5" translatable="false">Tarsa</string>
    <string name="cred_title6">DESARROLLO</string>
    <string name="cred_text6" translatable="false">Julián Marín Porriño</string>
    <string name="cred_title7">ACCESIBILIDAD</string>
    <string name="cred_text7" translatable="false">Teatro Acccesible, APTENT y Fundación Vodafone</string>
    <string name="cred_title8">PROMOVIDO POR</string>
    <string name="sharedPreferences" translatable="false">es.gorillap.misteri.SETTINGS</string>
    <string name="lang" translatable="false">lang</string>
    <string name="isAudioDescription" translatable="false">isAudioDescription</string>
    <string name="user_ringmode" translatable="false">user_ringmode</string>
    <string name="are_audios_downloaded" translatable="false">are_audios_downloaded</string>
    <string name="dialog_btn_accept">Aceptar</string>
    <string name="dialog_btn_cancel">Cancelar</string>
    <string name="warning_live_mute_title">¡Atención!</string>
    <string name="warning_live_mute_msg">SILENCIE SU DISPOSITIVO.\n El dispositivo debe de permanecer en silencio durante la representación. Muchas gracias por su colaboración.</string>
    <string name="warning_no_listen_title">¡Atención!</string>
    <string name="warning_no_listen_msg">Opción no disponible en días de representación. Disculpe las molestias.</string>
    <string name="dialog_download_title">Información importante</string>
    <string name="dialog_download_msg">Es necesaria la descarga de los contenidos de audio para esta sección.\nSólo se descargarán una vez.\nRecomendamos conectarse a una red WiFi.</string>
    <string name="progressdialog_download_title">Descarga de audios</string>
    <string name="progressdialog_download_msg">Descargando los contenidos de audio&#8230;\nEste proceso puede tardar un poco.</string>
    <string name="progressdialog_unzip_title">Preparando audios</string>
    <string name="progressdialog_unzip_msg">Preparando los contenidos de audio&#8230;</string>
    <string name="alert_unzip_error_title">Error preparando audios</string>
    <string name="alert_unzip_error_msg">Error preparando audios.\nPor favor inténtelo de nuevo.</string>
    <string name="alert_remotedbmanager_error_title">Error</string>
    <string name="alert_remotedbmanager_error_msg">Error recibiendo datos. Puede deberse a que su conexión a internet no sea estable.\nPor favor, revísela.</string>
    <string name="alert_audio_notfound_error_title">Error</string>
    <string name="alert_audio_notfound_error_msg">Este audio no se encuentra, puede que se haya desconectado de internet mientras se descargaba. Recomendamos borre los datos de la aplicación en Ajustes y vuelva a acceder.</string>
    <string name="btn_language">Español</string>
    <string name="btn_menu_live_title">Seguir en Directo</string>
    <string name="btn_menu_live_subtitle">Sigue la representación en directo</string>
    <string name="btn_menu_listen_title">Escucha el Misteri</string>
    <string name="btn_menu_listen_subtitle">Sigue la Festa de forma manual</string>
    <string name="btn_menu_info_title">Información e Historia</string>
    <string name="btn_menu_info_subtitle">Conoce todo sobre la representación</string>
    <string name="btn_menu_tickets_title">Compra de Entradas</string>
    <string name="btn_menu_tickets_subtitle">Servicio de venta de entradas</string>
    <string name="cast">Reparto</string>
    <string name="today_cast">Hoy intervienen en la representación:</string>
    <string name="apostolatTitle" translatable="false">Apostolat</string>
    <string name="jueusTitle" translatable="false">Jueus</string>
    <string name="escolanosTitle" translatable="false">Escolanos</string>
    <string name="cast1" translatable="false">Apostolat</string>
    <string name="cast2" translatable="false">Sant Joan</string>
    <string name="cast3" translatable="false">Sant Tomás</string>
    <string name="cast4" translatable="false">Sant Pere</string>
    <string name="cast5" translatable="false">Ternari</string>
    <string name="cast6" translatable="false">Tenors 1</string>
    <string name="cast7" translatable="false">Gran rabí</string>
    <string name="cast8" translatable="false">Tenors 2</string>
    <string name="cast9" translatable="false">Baritons</string>
    <string name="cast10" translatable="false">Baixos</string>
    <string name="cast11" translatable="false">María Major</string>
    <string name="cast12" translatable="false">María Salomé</string>
    <string name="cast13" translatable="false">María Iacobe</string>
    <string name="cast14" translatable="false">Àngels coixí</string>
    <string name="cast15" translatable="false">Àngels Mantell</string>
    <string name="cast16" translatable="false">Àngel</string>
    <string name="cast17" translatable="false">Araceli</string>
    <string name="cast18" translatable="false">Coronació</string>
    <string name="live">En directo</string>
    <string name="primer_acto">PRIMER ACTO</string>
    <string name="segundo_acto">SEGUNDO ACTO</string>
    <string name="cast_response_keys" translatable="false">apostolat-joan-tomas-pere-ternari-tenors1-granrabi-tenors2-baritons-baixos-mariamajor-mariasalome-mariaiacobe-angelsdecoixi-angelsdemantell-angel-araceli-coronacio</string>
    <string name="live_originalText_key" translatable="false">textoOriginal</string>
    <string name="live_translationText_key" translatable="false">traduccion</string>
    <string name="live_info_key" translatable="false">info</string>
    <string name="live_title_key" translatable="false">titulo</string>
    <string name="live_imageName_key" translatable="false">nombreImagen</string>
    <string name="liveinfo_infotext" translatable="false">info</string>
    <string name="liveinfo_titletext" translatable="false">title</string>
    <string name="liveinfo_image_id" translatable="false">imageId</string>
    <string name="scenes">Selección de Escenas</string>
    <string name="scene_vespra" translatable="false">La Vespra</string>
    <string name="nb_scenelist_vespra" translatable="false">8</string>
    <string name="scene_vespra1" translatable="false">María</string>
    <string name="scene_vespra2" translatable="false">Ángel</string>
    <string name="scene_vespra3" translatable="false">San Juan</string>
    <string name="scene_vespra4" translatable="false">San Pedro</string>
    <string name="scene_vespra5" translatable="false">Ternario</string>
    <string name="scene_vespra6" translatable="false">Salve</string>
    <string name="scene_vespra7" translatable="false">Dormición</string>
    <string name="scene_vespra8" translatable="false">Araceli</string>
    <string name="scene_festa" translatable="false">La Festa</string>
    <string name="nb_scenelist_festa" translatable="false">9</string>
    <string name="scene_festa1" translatable="false">Invitación a las Marias</string>
    <string name="scene_festa2" translatable="false">San Pedro y San Juan</string>
    <string name="scene_festa3" translatable="false">Apóstoles</string>
    <string name="scene_festa4" translatable="false">Judíos</string>
    <string name="scene_festa5" translatable="false">Conversión y bautismo</string>
    <string name="scene_festa6" translatable="false">Entierro</string>
    <string name="scene_festa7" translatable="false">Asunción</string>
    <string name="scene_festa8" translatable="false">Santo Tomás</string>
    <string name="info_history_title">Historia</string>
    <string name="info_history_longtext_1" translatable="false">El origen del Misterio de Elche no se ha podido determinar todavía con exactitud por falta de documentación. Sobre su nacimiento existen dos tradiciones locales. Una de ellas vincula la creación de la Festa con la conquista del Elche musulmán por las tropas aragonesas de Jaume I de Aragón, en 1265, es decir al nacimiento de la villa a la civilización cristiana. Otra tradición legendaria intenta dar al nacimiento del Misterio un origen milagroso y lo relaciona con la aparición o "Venida" de la imagen de la Virgen ilicitana el 29 de diciembre de 1370. De esta manera, el consueta de la Festa se habría hallado, junto a la figura mariana que la protagoniza, en el interior de una arca de madera que flotaba sobre las aguas del mar Mediterráneo, en la cercana playa del Tamarit (hoy, de Santa Pola), y que fue encontrado por el soldado guardacostas Francesc Cantó.</string>
    <string name="info_history_longtext_2" translatable="false">Sin embargo, las investigaciones desarrolladas en los últimos tiempos, tanto sobre la obra ilicitana, como sobre el teatro medieval europeo en general, proponen la segunda mitad del siglo XV -etapa en que se detecta un auge en el teatro de temática asuncionista- como la época más probable para datar el Misterio de Elche.\n\n Si realizamos un breve recorrido a través de la documentación histórica de la obra, veremos como en sus comienzos estuvo organizada por algunas familias de la pequeña nobleza local, como los Perpinyà o los Caro. La referencia documental más antigua de la Festa conocida hasta ahora, se halla en el testamento de la ilicitana Isabel Caro, de 1523, en donde legaba algunos fondos para continuar una "grandísima fiesta y solemnidad" que los religiosos de la villa realizaban en la iglesia de Santa María durante la festividad de la Asunción de la Madre de Dios, en honor a una imagen de la Virgen que la testadora poseía en su casa y que, tras su muerte, debía pasar a la ermita de San Sebastián.\n\n Tenemos noticias de la existencia en la villa en 1530 de una Cofradía de Nuestra Señora de la Asunción que, con sede en la citada ermita de San Sebastián, era la encargada de preparar la festividad. Esta cofradía se hallaba presidida por unos clavarios y mayordomos y, además de las aportaciones de los cofrades y de las limosnas recogidas, contaba con ayudas anuales del Consejo municipal.</string>
</resources>