<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreditsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_text"
            style="@style/titlebar"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/creditos_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_credits"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:src="@drawable/ic_back_button" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text1"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text2"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text3"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text4"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text5"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text6"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditText"
                android:text="@string/cred_text7"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:layout_marginTop="24sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/creditTitle"
                android:text="@string/cred_title8"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="89dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="88dp"
                    android:layout_marginBottom="55dp"
                    android:src="@drawable/creditos_visit_elche" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>