<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/menu_portada"
        android:layout_width="fill_parent"
        android:layout_height="291dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginBottom="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/portada" />

            <ImageView
                android:id="@+id/misteri_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/misteri_subtitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/content_description_dummy"
                android:src="@drawable/ic_misteri_title" />

            <ImageView
                android:id="@+id/misteri_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/content_description_dummy"
                android:src="@drawable/ic_misteri_subtitle" />

            <LinearLayout
                android:id="@+id/lang"
                android:layout_width="87dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/round_layout"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/btn_menu_text.subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="7dp"
                        android:layout_toStartOf="@+id/arrow"
                        android:background="@color/misteri_black"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:text="@string/btn_language"
                        android:textColor="@color/misteri_yellow" />

                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="9dp"
                        android:background="@color/misteri_black"
                        android:src="@drawable/ic_vector_yellow" />

                </RelativeLayout>



            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menu_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <!-- -->
            <LinearLayout
                android:id="@+id/live"
                style="@style/btn_menu.main"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/btn_menu_text.title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_live_title" />

                <TextView
                    style="@style/btn_menu_text.subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_live_subtitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/listen"
                style="@style/btn_menu.main"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/btn_menu_text.title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_listen_title" />

                <TextView
                    style="@style/btn_menu_text.subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_listen_subtitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/infoHistory"
                style="@style/btn_menu.main"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="11dp"
                android:orientation="vertical">

                <TextView
                    style="@style/btn_menu_text.title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_info_title" />

                <TextView
                    style="@style/btn_menu_text.subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_info_subtitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buyTickets"
                style="@style/btn_menu.main"
                android:orientation="vertical">

                <TextView
                    style="@style/btn_menu_text.title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_tickets_title" />

                <TextView
                    style="@style/btn_menu_text.subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_tickets_subtitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/infoCredits"
                style="@style/btn_menu.main"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:orientation="vertical">

                <TextView
                    style="@style/btn_menu_text.title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Información y Créditos" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>